--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,25 +16,15 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.24'
-
-    - name: Cache Go modules
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-build
-        restore-keys: |
-          ${{ runner.os }}-go-
 
     - name: Build
       run: go build -v cmd/server/main.go
 
     - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v4
+      uses: golangci/golangci-lint-action@v8
       with:
-          version: latest
+          version: v2.1
           skip-cache: true
