--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,6 +44,16 @@ jobs:
         with:
           go-version: '1.24'
 
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
