--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,36 +26,15 @@ jobs:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-build
         restore-keys: |
           ${{ runner.os }}-go-
 
     - name: Build
       run: go build -v cmd/server/main.go
 
-  analyse:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.24'
-
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v4
+      with:
           version: latest
           skip-cache: true
